# join-panda

./: Makefile  README.md  pyproject.toml
api/: join_panda_db.sqlite3
api/api/: settings.py  urls.py
csvapp/: models.py  serializers.py  test.py  utils.py  viewsets.py
csvapp/migrations/: 0001_initial.py  0002_auto_20220824_2014.py
